fix link alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -685,8 +685,8 @@ p {
 }
 
 #portfolio .portfolio-item .portfolio-info .preview-link, #portfolio .portfolio-item .portfolio-info .details-link {
-  position: absolute;
-  right: 40px;
+  position: relative;
+  right: 10px;
   font-size: 24px;
   top: calc(50% - 18px);
   color: #64ABE3;
